--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-Login==0.5.0
 Flask-Markdown==0.3
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.1
 Markdown==3.2.1
